--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>saludo</title>
+  <title>Mi pagina</title>
 </head>
 <body>
-<h1>Pagina de saludo</h1>
+<h1>Bienvenido a la gestion </h1>
 </body>
 </html>
